[project]
name = "werkflow-appito"
version = "0.1.0"
description = "An IBM Appito module for Werkflow."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ada Lundhe", email = "adalundhe@lundhe.audio"}
]
classifiers = [
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Operating System :: OS Independent",
]
keywords = [
    'pypi', 
    'cicd', 
    'python',
    'werkflow',
    'workflow',
    'werkflow-core',
    'appito',
    'boto3',
    'ibm'
]
license-files = [ "LICENSE" ]
dependencies = [
    'werkflow-core',
    'werkflow-file',
    'werkflow-secrets',
    'werkflow-shell',
    'werkflow-system',
    "werkflow-http",
    'pydantic',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"