[project]
name = "werkflow-aws"
version = "0.5.34"
description = "An AWS module for Werkflow powered by Boto3."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ada Lundhe", email = "adalundhe@lundhe.audio"}
]
classifiers = [
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Operating System :: OS Independent",
]
keywords = [
    'pypi', 
    'cicd', 
    'python',
    'werkflow',
    'workflow',
    'werkflow-core',
    'aws',
    'boto3',
    'aws-cli'
]
license-files = [ "LICENSE" ]
dependencies = [
    'werkflow-core',
    'werkflow-file',
    'werkflow-secrets',
    'werkflow-shell',
    'werkflow-system',
    'boto3',
    'pydantic',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"