[project]
name = "werkflow-http"
version = "0.5.0"
description = "An HTTP module for Werkflow."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ada Lundhe", email = "adalundhe@lundhe.audio"}
]
classifiers = [
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Operating System :: OS Independent",
]
keywords = [
    'pypi', 
    'cicd', 
    'python',
    'werkflow',
    'workflow',
    'http',
    'http1.1',
]
license-files = [ "LICENSE" ]
dependencies = [
    'werkflow-core',
    'werkflow-file',
    'werkflow-secrets',
    'werkflow-shell',
    'werkflow-system',
    'aiodns',
    'orjson',
    'pydantic',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"