# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "werkflow-metrikflow"
version = "0.2.0"
requires-python = ">=3.10"
description="A library for processing and sending metrics."
readme = "README.md"
authors = [{ name = "Ada Lundhe", email = "adalundhe@lundhe.audio" }]
license = { file = "LICENSE" }
classifiers = [
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = [
    'pypi', 
    'cicd', 
    'python',
    'werkflow',
    'workflow',
    'metrikflow',
    'stats',
    'stats-integrations',
    'datadog',
    'reporting'
]
dependencies = [
    'metrikflow',
    'werkflow-core',
    'werkflow-file',
    'werkflow-secrets',
    'werkflow-shell',
    'werkflow-system',
]

[project.urls]
Homepage = "https://github.com/adalundhe/werkflow-modules/tree/main/werkflow-metrikflow"

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default