[project]
name = "werkflow-system"
version = "0.3.1"
description = "A module for working with operating systems of all architectures and types."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ada Lundhe", email = "adalundhe@lundhe.audio"}
]
classifiers = [
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Operating System :: OS Independent",
]
keywords = [
    'pypi', 
    'cicd', 
    'python',
    'werkflow',
    'workflow',
    'operating-systems',
]
license-files = [ "LICENSE" ]
dependencies = [
    'werkflow-core',
    'psutil',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"